<resources>
    <string name="app_name">SimpleMapProject</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dialog_marker_title">Choose an action</string>
    <string name="err_conflict_line">Conflict in draw line</string>

    <!-- ThrillLevel-->
    <string name="en_thrill_level_0">Family</string>
    <string name="en_thrill_level_1">Medium thrilling</string>
    <string name="en_thrill_level_2">Highly thrilling</string>
    <string name="en_thrill_level_3">Extremely thrilling</string>

    <string name="vi_thrill_level_0">Gia đình</string>
    <string name="vi_thrill_level_1">Cảm giác trung bình</string>
    <string name="vi_thrill_level_2">Cảm giác mạnh</string>
    <string name="vi_thrill_level_3">Cảm giác cực mạnh</string>

    <!-- PlaceService-->
    <string name="en_place_service_medical">Medical help</string>
    <string name="en_place_service_food">Food &amp; drink</string>
    <string name="en_place_service_wc">WC</string>
    <string name="en_place_service_ticket">Ticket counter</string>
    <string name="en_place_service_souvenir">Souvenir shop</string>
    <string name="en_place_service_guest">Guest services</string>
    <string name="en_place_checking_point">Checking point</string>
    <string name="en_place_sight_seeing">Sight seeing</string>


    <string name="vi_place_service_medical">Trợ giúp y tế</string>
    <string name="vi_place_service_food">Điểm bán đồ ăn &amp; nước</string>
    <string name="vi_place_service_wc">Nhà vệ sinh</string>
    <string name="vi_place_service_ticket">Điểm bán vé</string>
    <string name="vi_place_service_souvenir">Cửa hàng lưu niệm</string>
    <string name="vi_place_service_guest">Chăm sóc khách hàng</string>
    <string name="vi_place_sight_seeing">Điểm tham quan</string>

    <!-- Zone-->
    <string name="en_zone_vn">Vietnam zone</string>
    <string name="en_zone_jp">Japan zone</string>
    <string name="en_zone_kr">Korea zone</string>
    <string name="en_zone_cn">China zone</string>
    <string name="en_zone_india">India zone</string>
    <string name="en_zone_com">Cambodia zone</string>
    <string name="en_zone_thai">Thailand zone</string>
    <string name="en_zone_nepal">Nepal zone</string>
    <string name="en_zone_sin">Singapore zone</string>
    <string name="en_zone_indo">Indonesia zone</string>

    <string name="vi_zone_vn">Khu Việt Nam</string>
    <string name="vi_zone_jp">Khu Nhật Bản</string>
    <string name="vi_zone_kr">Khu Hàn Quốc</string>
    <string name="vi_zone_cn">Khu Trung Quốc</string>
    <string name="vi_zone_india">Khu Ấn Độ</string>
    <string name="vi_zone_com">Khu Campuchia</string>
    <string name="vi_zone_thai">Khu Thái Lan</string>
    <string name="vi_zone_nepal">Khu Nepal</string>
    <string name="vi_zone_sin">Khu Singapore</string>
    <string name="vi_zone_indo">Khu Indonesia</string>

    <!-- Place-->
    <string name="en_place_fountain">Fountain</string>
    <string name="en_place_entry_gate">Entry gate</string>
    <string name="en_place_sightseeing_cabin1">Sightseeing cabin (left)</string>
    <string name="en_place_sightseeing_cabin2">Sightseeing cabin (right)</string>
    <string name="en_place_night_market">Night marker</string>
    <string name="en_place_sun_wheel_stage">Sun Wheel stage</string>
    <string name="en_place_dragon_boat1">Dragon boat (left)</string>
    <string name="en_place_dragon_boat2">Dragon boat (right)</string>
    <string name="en_place_buddha_statue">Buddha statue</string>
    <string name="en_place_dragon_statue">Dragon statue</string>
    <string name="en_place_bamboo_garden">Bamboo garden</string>
    <string name="en_place_panda_restaurant">Panda restaurant</string>
    <string name="en_place_india_stage">India stage</string>
    <string name="en_place_the_dark">The dark</string>
    <string name="en_place_water_playground">Water playground</string>
    <string name="en_place_nepal_gate">Nepal gate</string>
    <string name="en_place_marina_stage">Marina stage</string>
    <string name="en_place_merlion_lake">Merlion stage</string>
    <string name="en_place_indo_restaurant">Indo restaurant</string>

    <string name="vi_place_fountain">Đài phun nước</string>
    <string name="vi_place_entry_gate">Cổng thành</string>
    <string name="vi_place_sightseeing_cabin">Chòi vọng cảnh</string>
    <string name="vi_place_night_market">Chợ đêm</string>
    <string name="vi_place_sun_wheel_stage">Sân khấu Sun Wheel</string>
    <string name="vi_place_dragon_boat">Thuyền rồng</string>
    <string name="vi_place_buddha_statue">Tượng Phật</string>
    <string name="vi_place_dragon_statue">Tượng rồng</string>
    <string name="vi_place_bamboo_garden">Vườn trúc</string>
    <string name="vi_place_panda_restaurant">Nhà hàng Panda</string>
    <string name="vi_place_india_stage">Sân khấu ấn độ</string>
    <string name="vi_place_the_dark">Ngôi nhà bí ẩn</string>
    <string name="vi_place_water_playground">Sân chơi nước</string>
    <string name="vi_place_nepal_gate">Cổng Nepal</string>
    <string name="vi_place_marina_stage">Sân khấu Marina</string>
    <string name="vi_place_merlion_lake">Hồ Merlion</string>
    <string name="vi_place_indo_restaurant">Nhà hàng Indo</string>

    <!-- Game -->
    <string name="game_golden_sky_tower">Golden Sky Tower</string>
    <string name="game_fairy_tea_house">Fairy Tea House</string>
    <string name="game_singapore_sling">Singapore Sling</string>
    <string name="game_highway_boat">Highway Boat</string>
    <string name="game_queen_cobra">Queen Cobra</string>
    <string name="game_port_of_sky_treasure">Port of Sky Treasure</string>
    <string name="game_paradise_fall">Paradise Fall</string>
    <string name="game_love_locks">Love Locks</string>
    <string name="game_flying_kirins">The Flying Kirins</string>
    <string name="game_journey_to_the_west">Journey to the West</string>
    <string name="game_kabuki_trucks">Kabuki Trucks</string>
    <string name="game_fireflies_forest">Fireflies Forest</string>
    <string name="game_ninja_flyer">Ninja Flyer</string>
    <string name="game_shanghai_1920">Shanghai 1920</string>
    <string name="game_garuda_valley">Garuda Valley</string>
    <string name="game_angry_motors">Angry Motors</string>
    <string name="game_festival_carousel">Festival Carousel</string>
    <string name="game_happy_choo_choo">Happy Choo Choo</string>
    <string name="game_dino_island">Dino Island</string>
    <string name="game_sun_wheel">Sun Wheel</string>


    <!-- String -->
    <string name="latitude">Latitude:</string>
    <string name="longitude">Longitude:</string>
    <string name="game">Game:</string>
    <string name="services">Services</string>
    <string name="no_game_selected">No game selected</string>
    <string name="no_service_selected">No service selected</string>
    <string name="place">Place:</string>
    <string name="no_place_selected">No place selected</string>
    <string name="question_thrilling_level">What is the maximum thrilling level you can play?</string>
    <string name="question_game_type">What kind of games do you want to play?</string>
    <string name="question_time_type">How long can you play at Asia Park?</string>
    <string name="question_limit_time">What time do you want to leave? \n (Asia Park opens from 2:00PM to 10:00PM)</string>
    <string name="maximum_thrill_level">Maximum thrill level: %s</string>
    <string name="formatted_time">%d hour(s) and %d minute(s)</string>
    <string name="estimated_time">Estimated time: %s</string>
    <string name="game_type">Typical of games: %s</string>
    <string name="available_time">Available time: %s</string>
    <string name="place_name_with_index">#%d - %s</string>
</resources>