<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:focusable="true"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingHorizontal="30dp">

    <TextView
        style="@style/titleTextStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:gravity="center"
        android:text="@string/question_thrilling_level" />

    <RelativeLayout
        android:id="@+id/btnExtremeThrilling"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="@drawable/bg_button_question"
        android:paddingVertical="15dp">

        <TextView
            style="@style/contentBlackTextStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/en_thrill_level_3"
            android:textColor="@color/white" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/btnHighlyThrilling"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_button_question"
        android:paddingVertical="15dp">

        <TextView
            style="@style/contentBlackTextStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/en_thrill_level_2"
            android:textColor="@color/white" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/btnMediumThrilling"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_button_question"
        android:paddingVertical="15dp">

        <TextView
            style="@style/contentBlackTextStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/en_thrill_level_1"
            android:textColor="@color/white" />
    </RelativeLayout>

</LinearLayout>